--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
                           framework, bootstrap, front-end, web-development,
                           ruby, rails">
     <meta name="author" content="Elliot Reed">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>Elliot Reed, Web Developer</title>
     <link href="./vendor/bootstrap-3.3.5-dist/css/bootstrap-theme.min.css" rel="stylesheet">
@@ -18,6 +19,20 @@
 
   </head>
   <body>
-
+    <div id="header-wrapper">
+      <header>
+        <nav class="navbar navbar-default">
+          <div class="container-fluid">
+            <div class="navbar-header">
+              <button type="button" class ="navbar-toggle collapsed" data-toggle="collapse" aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+          </div>
+        </nav>
+      </header>
+    </div>
   </body>
 </html>
