--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link href="./vendor/bootstrap-3.3.5-dist/css/bootstrap-theme.css" rel="stylesheet">
     <link href="./vendor/bootstrap-3.3.5-dist/css/bootstrap.css" rel="stylesheet">
     <link href="./stylesheets/stylesheet.css" rel="stylesheet">
+    <link href="./font-awesome/css/font-awesome.min.css" rel="stylesheet">
 
   <script src="./vendor/jquery-2.1.4.min.js"></script>
   <script src="./vendor/bootstrap-3.3.5-dist/js/bootstrap.min.js"></script>
