--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <title>Elliot Reed, Web Developer</title>
     <link href="./vendor/bootstrap-3.3.5-dist/css/bootstrap-theme.css" rel="stylesheet">
     <link href="./vendor/bootstrap-3.3.5-dist/css/bootstrap.css" rel="stylesheet">
-    <link href="./stylesheets/stylesheet.css" rel="stylesheet">
     <link href="./font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <link href="./stylesheets/stylesheet.css" rel="stylesheet">
 
   <script src="./vendor/jquery-2.1.4.min.js"></script>
   <script src="./vendor/bootstrap-3.3.5-dist/js/bootstrap.min.js"></script>
@@ -77,13 +77,15 @@
     <div id="footer-wrapper">
       <footer class="footer">
         <div class="container">
-          <ul class="ecr-footer-links">
-            <li><a href="https://www.linkedin.com/pub/elliot-reed/12/674/553" style="text-decoration:none;"><img src="https://static.licdn.com/scds/common/u/img/webpromo/btn_in_20x15.png" width="20" height="15" alt="View Elliot Reed's LinkedIn profile" style="vertical-align:middle;" border="0"></a></li>
-            <li><a class="er-email" href="mailto:elliotreed2@gmail.com"></a></li>
+          <ul class="er-footer-links">
+            <li><a class='er-linkedin-footer' href="https://www.linkedin.com/in/elliotcreed"><i class="fa fa-linkedin"></i></a></li>
+            <li><a class='er-github-footer' href="https://www.github.com/drransom"><i class="fa fa-github"></i></a></li>
+            <li><a class="er-email" href="mailto:elliotreed2@gmail.com"><i class="fa fa-envelope"></i></a></li>
           </ul>
 
         </div>
       </footer>
     </div>
   </body>
+
 </html>
