--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <body>
     <div id="header-wrapper">
       <header>
-        <nav class="navbar navbar-default">
+        <nav class="navbar navbar-default er-navbar">
           <div class="container-fluid">
 
             <!--collapse header -->
@@ -35,11 +35,11 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="#">Elliot Reed</a>
+              <a class="navbar-brand er-navbar-brand" href="#">Elliot Reed</a>
             </div>
 
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-              <ul class="nav navbar-nav">
+              <ul class="nav navbar-nav er-navbar-nav">
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About Me</a>
                   <ul class="dropdown-menu">
