--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
       <footer class="footer">
         <div class="container">
           <ul class="er-footer-links">
-            <li><a class='er-linkedin-footer' href="https://www.linkedin.com/in/elliotcreed"><i class="fa fa-linkedin"></i></a></li>
-            <li><a class='er-github-footer' href="https://www.github.com/drransom"><i class="fa fa-github"></i></a></li>
-            <li><a class="er-email" href="mailto:elliotreed2@gmail.com"><i class="fa fa-envelope"></i></a></li>
+            <li><a href="https://www.linkedin.com/in/elliotcreed"><i class="fa fa-linkedin"></i></a></li>
+            <li><a href="https://www.github.com/drransom"><i class="fa fa-github"></i></a></li>
+            <li><a href="mailto:elliotreed2@gmail.com"><i class="fa fa-envelope"></i></a></li>
           </ul>
 
         </div>
