--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
   <script src="./vendor/jquery-2.1.4.min.js"></script>
   <script src="./vendor/bootstrap-3.3.5-dist/js/bootstrap.min.js"></script>
   <script src="./vendor/bower_components/bootstrap-hover-dropdown/bootstrap-hover-dropdown.js"></script>
-  <script src-"./vendor/node_modules/react.js"></script>
+  <script src="./vendor/node_modules/react/dist/react.js"></script>
+  <script src="./vendor/node_modules/react/dist/JSXTransformer.js"></script>
   <script src="./javascripts/page_initialization.js"></script>
 
   </head>
