add contact link

--- a/index.html
+++ b/index.html
@@ -41,40 +41,41 @@
               <a class="navbar-brand er-navbar-brand" href="#">Elliot Reed</a>
             </div>
 
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <div class="collapse navbar-collapse">
               <ul class="nav navbar-nav er-navbar-nav">
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About Me</a>
-                  <ul class="dropdown-menu er-dropdown-menu er-about">
+                  <ul class="dropdown-menu er-navbar-item er-about">
                     <li class="er-navbar-list-item"><a href="#" class="er-navbar-list-item-link">About</a></li>
-                    <li class="er-navbar-list-item"><a href="http://www.linkedin.com/in/elliotcreed" class="er-navbar-list-item-link">LinkedIn</a></li>
+                    <li class="er-navbar-list-item"><a href="http://www.linkedin.com/in/elliotcreed"target="_blank" class="er-navbar-list-item-link">LinkedIn</a></li>
                   </ul>
                 </li>
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Portfolio</a>
-                  <ul class="dropdown-menu er-dropdown-menu">
+                  <ul class="dropdown-menu er-navbar-item">
                     <li class="er-navbar-list-item">
-                      <a class="er-navbar-list-item-link er-portfolio-link" href="https://taskforce.elliotreed.com">TaskForce <small>(Rails)</small></a>
+                      <a class="er-navbar-list-item-link er-portfolio-link" target="_blank" href="https://taskforce.elliotreed.com">TaskForce <small>(Rails)</small></a>
                     </li>
                     <li class="er-navbar-list-item">
-                      <a href="http://www.github.com/drransom/TaskForce" class="er-navbar-list-item-link er-portfolio-source">Source</a>
-                    </li>
-                    <li role="separator" class="divider"></li>
-                    <li class="er-navbar-list-item">
-                      <a href="http://drransom.github.io/Asteroids" class="er-navbar-list-item-link er-portfolio-link">Asteroids <small>(HTML5 Canvas)</small></a>
-                    </li>
-                    <li class="er-navbar-list-item">
-                        <a href="http://www.github.com/drransom/Asteroids" class="er-navbar-list-item-link er-portfolio-source">Source</a>
+                      <a href="http://www.github.com/drransom/TaskForce" target="_blank" class="er-navbar-list-item-link er-portfolio-source">Source</a>
                     </li>
                     <li role="separator" class="divider"></li>
                     <li class="er-navbar-list-item">
-                      <a href="http://www.github.com/drransom/chess" class="er-navbar-list-item-link er-portfolio-link">Command Line Chess <small>(Ruby)</small></a>
+                      <a href="http://drransom.github.io/Asteroids" target="_blank" class="er-navbar-list-item-link er-portfolio-link">Asteroids <small>(HTML5 Canvas)</small></a>
+                    </li>
+                    <li class="er-navbar-list-item">
+                        <a href="http://www.github.com/drransom/Asteroids" target="_blank" class="er-navbar-list-item-link er-portfolio-source">Source</a>
+                    </li>
+                    <li role="separator" class="divider"></li>
+                    <li class="er-navbar-list-item">
+                      <a href="http://www.github.com/drransom/chess" target="_blank" class="er-navbar-list-item-link er-portfolio-link">Command Line Chess <small>(Ruby)</small></a>
                     </li>
                     <li>
-                      <a href="http://www.github.com/drransom/chess" class="er-navbar-list-item-link er-portfolio-source">Source</a>
+                      <a href="http://www.github.com/drransom/chess" target="_blank" class="er-navbar-list-item-link er-portfolio-source">Source</a>
                     </li>
                   </ul>
                 </li>
+                <li><a href="#" class="er-navbar-item">Contact</a></li>
               </ul>
             </div>
 
@@ -88,8 +89,8 @@
       <footer class="footer">
         <div class="container">
           <ul class="er-footer-links">
-            <li><a href="https://www.linkedin.com/in/elliotcreed"><i class="fa fa-linkedin"></i></a></li>
-            <li><a href="https://www.github.com/drransom"><i class="fa fa-github"></i></a></li>
+            <li><a href="https://www.linkedin.com/in/elliotcreed" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+            <li><a href="https://www.github.com/drransom" target="_blank"><i class="fa fa-github"></i></a></li>
             <li><a href="mailto:elliotreed2@gmail.com"><i class="fa fa-envelope"></i></a></li>
           </ul>
 
