--- a/index.html
+++ b/index.html
@@ -20,8 +20,12 @@
     <script src="./vendor/bootstrap-3.3.5-dist/js/bootstrap.min.js"></script>
     <script src="./vendor/bower_components/bootstrap-hover-dropdown/bootstrap-hover-dropdown.js"></script>
     <script src="./vendor/node_modules/react/dist/react.js"></script>
-    <script src="./vendor/node_modules/react/dist/JSXTransformer.js"></script>
-    <script src="./javascripts/page_initialization.js"></script>
+    <script>
+      if (window.ECR === undefined) {
+        window.ECR = {};
+      }
+    </script>
+    <script src="./javascripts/page_initialization_compiled.js"></script>
 
   </head>
   <body>
@@ -85,6 +89,7 @@
         </nav>
       </header>
     </div>
+    <div id="main-content-area"></div>
     <div id="footer-wrapper">
       <footer class="footer">
         <div class="container">
@@ -98,5 +103,11 @@
       </footer>
     </div>
   </body>
+
+  <script>
+    window.onload = function() {
+      ECR.createCommentBox();
+    };
+  </script>
 
 </html>
