update semantic tags

--- a/index.html
+++ b/index.html
@@ -59,21 +59,21 @@
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Portfolio</a>
                   <ul class="dropdown-menu er-navbar-item">
                     <li class="er-navbar-list-item">
-                      <a class="er-navbar-list-item-link er-portfolio-link" target="_blank" href="https://taskforce.elliotreed.com">TaskForce <small>(Rails)</small></a>
+                      <a class="er-navbar-list-item-link er-portfolio-link" target="_blank" href="https://taskforce.elliotreed.com">TaskForce <span class="smaller-text">(Rails)</span></a>
                     </li>
                     <li class="er-navbar-list-item">
                       <a href="http://www.github.com/drransom/TaskForce" target="_blank" class="er-navbar-list-item-link er-portfolio-source">Source</a>
                     </li>
                     <li role="separator" class="divider"></li>
                     <li class="er-navbar-list-item">
-                      <a href="http://drransom.github.io/Asteroids" target="_blank" class="er-navbar-list-item-link er-portfolio-link">Asteroids <small>(HTML5 Canvas)</small></a>
+                      <a href="http://drransom.github.io/Asteroids" target="_blank" class="er-navbar-list-item-link er-portfolio-link">Asteroids <span class="smaller-text">(HTML5 Canvas)</span></a>
                     </li>
                     <li class="er-navbar-list-item">
                         <a href="http://www.github.com/drransom/Asteroids" target="_blank" class="er-navbar-list-item-link er-portfolio-source">Source</a>
                     </li>
                     <li role="separator" class="divider"></li>
                     <li class="er-navbar-list-item">
-                      <a href="http://www.github.com/drransom/chess" target="_blank" class="er-navbar-list-item-link er-portfolio-link">Command Line Chess <small>(Ruby)</small></a>
+                      <a href="http://www.github.com/drransom/chess" target="_blank" class="er-navbar-list-item-link er-portfolio-link">Command Line Chess <span class="smaller-text">(Ruby)</span></a>
                     </li>
                     <li>
                       <a href="http://www.github.com/drransom/chess" target="_blank" class="er-navbar-list-item-link er-portfolio-source">Source</a>
