--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <script src="./vendor/bower_components/bootstrap-hover-dropdown/bootstrap-hover-dropdown.js"></script>
     <script src="./vendor/node_modules/react/dist/react.js"></script>
     <script src="./javascripts/page_initialization_compiled.js"></script>
+    <script src="./javascripts/navbar_compiled.js"></script>
 
     <script>
       window.onload = function() {
@@ -31,64 +32,6 @@
   </head>
   <body>
     <div id="header-wrapper">
-      <header>
-        <nav class="navbar navbar-default er-navbar">
-          <div class="container-fluid">
-
-            <!--collapse header -->
-            <div class="navbar-header">
-              <button type="button" class ="navbar-toggle collapsed" data-toggle="collapse" aria-expanded="false">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-              </button>
-              <a class="navbar-brand er-navbar-brand" href="#">Elliot Reed</a>
-            </div>
-
-            <div class="collapse navbar-collapse">
-              <ul class="nav navbar-nav er-navbar-nav">
-                <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About Me</a>
-                  <ul class="dropdown-menu er-navbar-item er-about">
-                    <li class="er-navbar-list-item"><a href="#" class="er-navbar-list-item-link">About</a></li>
-                    <li class="er-navbar-list-item"><a href="http://www.linkedin.com/in/elliotcreed"target="_blank" class="er-navbar-list-item-link">LinkedIn</a></li>
-                  </ul>
-                </li>
-                <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Portfolio</a>
-                  <ul class="dropdown-menu er-navbar-item">
-                    <li class="er-navbar-list-item">
-                      <a class="er-navbar-list-item-link er-portfolio-link" target="_blank" href="https://taskforce.elliotreed.com">TaskForce <span class="smaller-text">(Rails)</span></a>
-                    </li>
-                    <li class="er-navbar-list-item">
-                      <a href="http://www.github.com/drransom/TaskForce" target="_blank" class="er-navbar-list-item-link er-portfolio-source">Source</a>
-                    </li>
-                    <li role="separator" class="divider"></li>
-                    <li class="er-navbar-list-item">
-                      <a href="http://drransom.github.io/Asteroids" target="_blank" class="er-navbar-list-item-link er-portfolio-link">Asteroids <span class="smaller-text">(HTML5 Canvas)</span></a>
-                    </li>
-                    <li class="er-navbar-list-item">
-                        <a href="http://www.github.com/drransom/Asteroids" target="_blank" class="er-navbar-list-item-link er-portfolio-source">Source</a>
-                    </li>
-                    <li role="separator" class="divider"></li>
-                    <li class="er-navbar-list-item">
-                      <a href="http://www.github.com/drransom/chess" target="_blank" class="er-navbar-list-item-link er-portfolio-link">Command Line Chess <span class="smaller-text">(Ruby)</span></a>
-                    </li>
-                    <li>
-                      <a href="http://www.github.com/drransom/chess" target="_blank" class="er-navbar-list-item-link er-portfolio-source">Source</a>
-                    </li>
-                  </ul>
-                </li>
-                <li><a href="#" class="er-navbar-item">Contact</a></li>
-              </ul>
-            </div>
-
-          </div>
-
-
-        </nav>
-      </header>
     </div>
     <div id="main-content-area"></div>
     <div id="footer-wrapper">
