able to add one project

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <script src="./vendor/bower_components/bootstrap-hover-dropdown/bootstrap-hover-dropdown.js"></script>
     <script src="./javascripts/page_initialization_compiled.js"></script>
     <script src="./javascripts/navbar_compiled.js"></script>
+    <script src="./javascripts/projects_compiled.js"></script>
 
     <script>
       window.onload = function() {
