edit project styling and stylesheet

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
   </head>
   <body>
-    <div id="header-wrapper">
+    <div id="header-wrapper" class="header-wrapper">
     </div>
     <div id="main-content-area"></div>
     <div id="footer-wrapper">
