--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <script src="./javascripts/page_initialization_compiled.js"></script>
     <script src="./javascripts/navbar_compiled.js"></script>
     <script src="./javascripts/projects_compiled.js"></script>
+    <script src="./javascripts/bio_compiled.js"></script>
 
     <script>
       window.onload = function() {
