add compiled script

--- a/index.html
+++ b/index.html
@@ -20,11 +20,7 @@
     <script src="./vendor/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="./vendor/node_modules/react/dist/react.js"></script>
     <script src="./vendor/bower_components/bootstrap-hover-dropdown/bootstrap-hover-dropdown.js"></script>
-    <script src="./javascripts/images_compiled.js"></script>
-    <script src="./javascripts/page_initialization_compiled.js"></script>
-    <script src="./javascripts/navbar_compiled.js"></script>
-    <script src="./javascripts/projects_compiled.js"></script>
-    <script src="./javascripts/bio_compiled.js"></script>
+    <script src="./compiled_scripts/ecr.js"></script>
 
     <script>
       window.onload = function() {
